--- a/style.css
+++ b/style.css
@@ -29,19 +29,20 @@
   }
   
   header h1 {
-    font-size: 3.5rem;
+    font-size: 65px;
     margin-bottom: 10px;
     font-family: Starborn;
   }
   
   header p {
-    font-size: 1.3rem;
+    font-size: 30px;
     font-style: italic;
     font-family: Starborn;
+    color: rgb(13, 26, 82);
   }
   
   .section {
-    padding: 60px 20px;
+    padding: 30px 20px;
     text-align: center;
   }
   
@@ -53,9 +54,9 @@
   }
   
   p {
-    font-size: 1.2rem;
+    font-size: 40px;
     color: #555;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
   
   ul {
@@ -67,11 +68,14 @@
   
   ul li {
     margin: 10px 0;
+    font-size: 30px;
+    margin-left: 80px;
   }
   
   ul li a {
     color: #1dc097;
     text-decoration: none;
+    font-size: 25px;
   }
   
   ul li a:hover {
@@ -103,7 +107,7 @@
   
   .photo p {
     padding: 10px;
-    font-size: 1.1rem;
+    font-size: 30px;
     color: #333;
   }
   
@@ -135,6 +139,10 @@
   }
   
   footer p {
-    font-size: 1rem;
+    font-size: 20px;
+  }
+
+  .tarothead{
+      color: #43539b;
   }
   
